--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>JavaScript Arrays</title>
+    <title>Quiz Game</title>
     <link href="css/style.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
   </head>
@@ -12,7 +12,7 @@
 <div class="container">
        <div class="c-info container-fluid jumbotron bg-info text-center">
       <h1>Quiz Challenge</h1>
-      <p>It's time to play the quiz.</p>
+      <p>It's time to play the quiz :)</p>
       <br><br>
     </div>
 
